--- a/sample/index.html
+++ b/sample/index.html
@@ -28,7 +28,15 @@ function SendLoginRequest(username,password)
 <h1>login page</h1>
 <body>
 <div id="textResponse">
-awaiting response
+Please login here!
+</div>
+<div>
+	<label><b>Username</b></label>
+	<input type="text">
+</div>
+<div>
+	<label><b>Password</b></label>
+	<input type="text">
 </div>
 <script>
 SendLoginRequest("kehoed","12345");
